--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ lazy-object-proxy==1.4.3
 mccabe==0.6.1
 mypy-extensions==0.4.3
 pathspec==0.8.1
+pyflakes==2.2.0
 pylint==2.6.0
 regex==2020.11.13
 requests==2.25.1
