--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,40 @@
 appdirs==1.4.4
 astroid==2.4.2
+attrs==20.3.0
 black==20.8b1
 blessings==1.7
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
+coverage==5.3.1
+decorator==4.4.2
 dnspython==2.0.0
+hypothesis==5.43.4
 idna==2.10
+importlab==0.5.1
+iniconfig==1.1.1
 isort==5.6.4
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 mypy-extensions==0.4.3
+networkx==2.5
+ninja==1.10.0.post2
+packaging==20.8
+parameterized==0.7.4
 pathspec==0.8.1
+pluggy==0.13.1
+py==1.10.0
 pyflakes==2.2.0
 pylint==2.6.0
+pyparsing==2.4.7
+pytest==6.2.1
+pytype==2020.12.23
+PyYAML==5.3.1
 regex==2020.11.13
 requests==2.25.1
 scapy==2.4.4
 six==1.15.0
+sortedcontainers==2.3.0
 toml==0.10.2
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
