--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ pyflakes==2.2.0
 pylint==2.6.0
 pyparsing==2.4.7
 pytest==6.2.1
+pytest-mock==3.4.0
 pytype==2020.12.23
 PyYAML==5.3.1
 regex==2020.11.13
